package main.dto.plataformaDTO;

public record PlataformaDTO(String nome) {}