@startuml

left to right direction

class DefaultEntity {
  - Long id
  - LocalDate created_At
  - LocalDate updated_At
}

class Pessoa{
  - String nome
  - String email 
}

class Usuario {
  - String username
  - String senha
}

class Cliente {
  - String cpf
}

class Fabricante {
  - String cnpj
}

class Endereco {
  - String rua
  - String numero
  - String bairro
  - String cidade
  - String estado
  - String cep
}

class Telefone {
  - String numero
}

class Controle{
  - String nome
  - Double preco
  - Boolean touchpad
  - Boolean gatilhosAdaptaveis
  - Integer estoque
}

class ImagemControle {
  - Long id
  - String url
}

class Plataforma {
  - String nome
}

enum Cor {
  PRETO
  BRANCO
  VERMELHO
  AZUL
  ROXO
}

class Pedido {
  - LocalDate dataPedido
  - Double total 
}

class ItemPedido {
  - Integer quantidade
  - Double preco
}

class Conexao {
  - String descricao
}

enum Tipo{
  WIRELESS
  WIRED
}

enum Perfil {
  ADM
  USER
}

enum TipoPagamento{
  DEBITO
  CREDITO
  PIX
  BOLETO
}


' Heranças
Pessoa --|> DefaultEntity
Usuario --|> Cliente
Cliente --|> Pessoa
Fabricante --|> Pessoa
Controle --|> DefaultEntity

' Relacionamentos
Pessoa "1" --> "1" Telefone
Pessoa "1" --> "*" Endereco
Fabricante "1" --> "*" Controle : <associacao>
Controle "*" --> "*" Plataforma : <agregacao>
Controle "1" --> "*" ImagemControle : <composicao>
Pedido "1" --> "*" ItemPedido 
ItemPedido "*" --> "1" Controle : <associacao>
Pedido "*" --> "1" Usuario
Pedido "*" --> "1" Endereco
Controle "*" --> "*" Conexao : <associacao>

' Enums
Controle "*" --> "1" Cor : <agregacao>
Conexao "*" --> "1" Tipo
Usuario "*" --> "1" Perfil
Pedido "*" --> "1" TipoPagamento

@enduml